--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <a href="downloads/">Downloads</a><br />
 
- <form action="http://localhost:8080/upload" method="post" enctype="multipart/form-data">
+ <form action="//{{ .Path }}:8080/upload" method="post" enctype="multipart/form-data">
  <label for="file">Filename:</label>
  <input type="file" name="file" id="file">
  <input type="submit" name="submit" value="Submit">
