--- a/assets/index.html
+++ b/assets/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<div>
-	<form action="//{{ .Path }}:8080/upload" method="post" enctype="multipart/form-data">
+	<form action="upload" method="post" enctype="multipart/form-data">
 		<input type="file" name="file" id="file" />
 		<input type="submit" name="submit" value="Submit" />
 	</form>
