--- a/assets/download.html
+++ b/assets/download.html
@@ -5,13 +5,13 @@
 	<meta name="description" content="simple file uploader for lan parties">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>{{ .Title }}</title>
-	<link rel="stylesheet" href="assets/local.css">
+	<link rel="stylesheet" href="/assets/local.css">
 </head>
 <body>
 	<a href="/">Back to upload form</a><br />
 	<div id="downloads">
 		{{ range .Downloads }}
-			<ul><a href="/_downloads/{{ .Filename }}">{{ .Filename }}</a></ul>
+			<ul><a href="/_downloads/{{ .Filename }}">{{ .Filename }}</a>&nbsp;<a href="/delete/{{ .Filename }}">Delete</a></ul>
 		{{ end }}
 	</div>
 </body>
