--- a/assets/delete.html
+++ b/assets/delete.html
@@ -1,13 +1,11 @@
 <!doctype html>
 <html lang="en">
-<head>
 	<meta charset="utf-8">
 	<meta name="description" content="simple file uploader for lan parties">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>{{ .Title }}</title>
 	<link rel="stylesheet" href="/assets/local.css">
-</head>
-<body>
+	<div id="content">
 	<a href="/">Back to upload form</a><br />
 	<div id="delete">
 	<form action="/deletefile" method="POST" >
@@ -16,5 +14,5 @@
 		<input type="submit" name="submit" value="Submit" />
 	</form>
 	</div>
-</body>
+	</div>
 </html>
