--- a/assets/index.html
+++ b/assets/index.html
@@ -1,13 +1,11 @@
 <!doctype html>
 <html lang="en">
-<head>
 	<meta charset="utf-8">
 	<meta name="description" content="simple file uploader for lan parties">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>{{ .Title }}</title>
 	<link rel="stylesheet" href="/assets/local.css">
-</head>
-<body>
+	<div id="content">
 	<span><a href="/downloads">Downloads</a></span>
 	<div id="uploadForm">
 	<form action="/upload" method="POST" enctype="multipart/form-data">
@@ -16,5 +14,5 @@
 		<input type="submit" name="submit" value="Submit" />
 	</form>
 	</div>
-</body>
+	</div>
 </html>
