--- a/assets/delete.html
+++ b/assets/delete.html
@@ -5,14 +5,35 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>{{ .Title }}</title>
 	<link rel="stylesheet" href="/assets/local.css">
-	<div id="content">
-	<a href="/">Back to upload form</a><br />
-	<div id="delete">
-	<form action="/deletefile" method="POST" >
-		<label for="passwd">Password:</label><input type="password" name="passwd" id="passwd" />
-		<input type="text" name="file" value="{{ .File }}" hidden="true" />
-		<input type="submit" name="submit" value="Submit" />
-	</form>
+
+	<div id="gradient-container">
+		<div id="content">
+			<h1>FЦР</h1>
+			<a href="/">Back to upload form</a><br />
+			<div id="delete">
+			<form action="/deletefile" method="POST" >
+				<label for="passwd">Password:</label><input type="password" name="passwd" id="passwd" />
+				<input type="text" name="file" value="{{ .File }}" hidden="true" />
+				<input type="submit" name="submit" value="Submit" />
+			</form>
+			</div>
+		</div>
+		<div class="animate-wrapper">
+			<div class="starburst">
+			  <div class="outer">
+			    <div class="ray"></div>
+			    <div class="ray"></div>
+			    <div class="ray"></div>
+			    <div class="ray"></div>
+			    <div class="ray"></div>
+			    <div class="ray"></div>
+			    <div class="ray"></div>
+			    <div class="ray"></div>
+			    <div class="ray"></div>
+			    <div class="ray"></div>
+			  </div>
+			</div>
+		</div>
 	</div>
-	</div>
+
 </html>
