--- a/assets/index.html
+++ b/assets/index.html
@@ -5,14 +5,38 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>{{ .Title }}</title>
 	<link rel="stylesheet" href="/assets/local.css">
-	<div id="content">
-	<span><a href="/downloads">Downloads</a></span>
-	<div id="uploadForm">
-	<form action="/upload" method="POST" enctype="multipart/form-data">
-		<input type="password" name="passwd" id="passwd" />
-		<input type="file" name="file" id="file" />
-		<input type="submit" name="submit" value="Submit" />
-	</form>
-	</div>
+
+	<div id="gradient-container">
+		<div id="content">
+			<h1>FЦР</h1>
+			<span><a href="/downloads">Downloads</a></span>
+			<div id="uploadForm">
+				<form action="/upload" method="POST" enctype="multipart/form-data">
+					<input type="password" name="passwd" id="passwd" />
+						<div class="fileUpload communist-button">
+						    <span>Upload</span>
+						    <input type="file" class="upload communist-button" id="file" />
+						</div>
+					<input class="communist-button" type="submit" name="submit" value="Submit" />
+				</form>
+			</div>
+		</div>
+
+		<div class="animate-wrapper">
+			<div class="starburst">
+			  <div class="outer">
+			    <div class="ray"></div>
+			    <div class="ray"></div>
+			    <div class="ray"></div>
+			    <div class="ray"></div>
+			    <div class="ray"></div>
+			    <div class="ray"></div>
+			    <div class="ray"></div>
+			    <div class="ray"></div>
+			    <div class="ray"></div>
+			    <div class="ray"></div>
+			  </div>
+			</div>
+		</div>
 	</div>
 </html>
